--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,12 @@
 
     <nav class="navbar">
         <div class="nav-logo">Soft <span style="color: var(--primary-color);">Computing</span></div>
-        <div class="nav-links">
+        <button class="hamburger" id="hamburger-btn" aria-label="Menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <div class="nav-links" id="nav-links">
             <a href="/">Beranda</a>
             <a href="/ga">Algoritma Genetika</a>
             <a href="/fuzzy">Logika Fuzzy</a>
